# SrmSolver

./: .gitignore  SrmSolver.sln  SrmSolver.sln.DotSettings
SrmSolver/: CMakeLists.txt  SrmSolver.vcxproj  SrmSolver.vcxproj.filters  conanfile.txt  cuda_float_types.h  cuda_includes.h  delta_dirac_function.h  eigen_includes.h  elemwise_result.h  filesystem.h  float4_arithmetics.h  gas_dynamic_flux.h  gas_state.h  get_closest_index.h  get_closest_rotated_state_index.h  get_coordinates_matrix.h  get_extrapolated_ghost_value.h  get_polynomial.h  get_stencil_indices.h  ghost_point_data.h  gnu_plot_wrapper.cpp  gnu_plot_wrapper.h  gnuplot-iostream.h  gpu_build_ghost_to_closest_map_kernel.h  gpu_calculate_ghost_point_data_kernel.h  gpu_gas_dynamic_kernel.h  gpu_grid.h  gpu_integrate_kernel.h  gpu_level_set_solver.h  gpu_level_set_solver_def.h  gpu_matrix.h  gpu_matrix_writer.h  gpu_reinitialize_kernel.h  gpu_set_first_order_ghost_points_kernel.h  gpu_set_ghost_points_kernel.h  gpu_srm_solver.h  gpu_srm_solver_def.h  level_set_derivatives.h  linear_system_solver.h  main.cu  (+26 more)
SrmSolver/src/: boundary_condition.h  cuda_float_types.h  cuda_includes.h  delta_dirac_function.h  discretization_order.h  elemwise_result.h  empty_callback.h  filesystem.cpp  filesystem.h  gas_dynamic_flux.h  gas_state.h  get_closest_index.h  get_coordinates_matrix.h  get_extrapolated_ghost_value.h  get_polynomial.h  get_stencil_indices.h  gnu_plot_wrapper.cpp  gnu_plot_wrapper.h  gpu_grid.h  gpu_level_set_solver.h  gpu_level_set_solver_def.h  gpu_matrix.h  gpu_matrix_writer.h  gpu_srm_solver.h  gpu_srm_solver_def.h  level_set_derivatives.h  linear_system_solver.h  main.cu  physical_properties.h  shape_solver_types.h  shapes.h  solver_callbacks.h  solver_reduction_functions.h
SrmSolver/src/kernel/: gpu_calculate_ghost_point_data_kernel.h  gpu_gas_dynamic_kernel.h  gpu_integrate_kernel.h  gpu_reinitialize_kernel.h  gpu_set_first_order_ghost_points_kernel.h  gpu_set_ghost_points_kernel.h
SrmSolver/src/matrix/: matrix.h  matrix_def.h  wrapper_base.h
SrmSolver/src/shape/: shape.h  shape_analyzer.h  srm_dual_thrust.h  srm_dual_thrust_def.h  srm_flush_mounted_nozzle.h  srm_flush_mounted_nozzle_def.h  srm_shape_nozzle_less.h  srm_shape_with_umbrella.h  (+2 more)
(+69 files in other folders)
